# tanks

./: README.md
src/: CMakeLists.txt
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  GameLoop.cpp  GameLoop.h  Singleton.h
src/engine/audio/: OalBuffer.cpp  OalBuffer.hpp  OalSound.cpp  OalSound.hpp  SoundEngine.cpp  SoundEngine.hpp  SoundHandle.cpp  SoundHandle.hpp
src/engine/audio/decoders/: AudioDecoder.cpp  AudioDecoder.hpp  Mp3Decoder.cpp  Mp3Decoder.hpp  WavDecoder.cpp  WavDecoder.hpp
src/engine/base/: IClipboard.h  IInput.h  IWindow.h  Keys.h  MouseButton.h
src/engine/common/: NonCopyable.h  Types.h
src/engine/ecs/: Component.h  ComponentContainer.h  ComponentIterator.h  ComponentView.h  ECS.h  EntityIterator.h  EntitySystem.h  EntityView.h  EventListener.h  Events.cpp  Events.h  TypeRegistry.h  ecsTest.h
src/engine/filesystem/: FileSystem.cpp  FileSystem.h  FileSystemUnix.cpp  FileSystemUnix.h  FileSystemWin32.cpp  FileSystemWin32.h
src/engine/logging/: LogManager.cpp  LogManager.h  Logger.cpp  Logger.h
src/engine/math/: Constants.h  Rect.h  Utils.h  Vect2D.h
src/engine/memory/: Header.h  MemoryDefines.h  ObjectPool.h  ObjectPtr.h
src/engine/rendering/: Color.h  ColoredVertex.h  DrawingContext.cpp  DrawingContext.h  GlTexture.h  Line.h  OpenGL.h  Point.h  RenderOpenGL.cpp  RenderOpenGL.h  RenderOpenGLv2.cpp  RenderOpenGLv2.h  RenderPartsOpenGL.cpp  RenderPartsOpenGL.h  RenderScheme.cpp  RenderScheme.h  RenderingEngine.cpp  RenderingEngine.h  SoilImage.cpp  SoilImage.h  TGAImage.cpp  TGAImage.h  TextureManager.cpp  TextureManager.h  Vertex.h
src/engine/rendering/base/: IDrawable.h  IImage.h  IRender.h  IRenderParts.h
src/engine/threading/: ThreadPool.cpp  ThreadPool.h  threadingTest.h
src/game/: CMakeLists.txt  main.cpp
src/game/glfw/: GlfwWindow.h
src/tanks/: CMakeLists.txt  main.cpp
src/tanks/glfw/: GlfwClipboard.cpp  GlfwClipboard.h  GlfwInput.cpp  GlfwInput.h  GlfwKeys.cpp  GlfwWindow.cpp
